@@ -2,7 +2,10 @@ May. 2. 2022. (B. InSung)
 - Monday Session Start!
 - Torch tensor size error. Target Size가 [1, 1] 이면 Tensor Size가 [1, 10] 으로 맞지가 않음.
     - Tensor size를 1, 1로는 줄일수가 없음. Input 이미 입력된 사이즈가 정해져 있기 때문에 따로 변경이 어려움. 그렇기에 이를 변형을 하던가 하나씩 넣어야하는데...
-    문제는 그렇게 하면 선형 연산이 되질 않음. 사이즈 변형을 함부로 할 수 없는 상태. 3차원으로 가도 Size가 맞지를 않음.
+    문제는 그렇게 하면 선형 연산이 되질 않음. 사이즈 변형을 함부로 할 수 없는 상태. 3차원으로 가도 Size가 맞지 않음.
+- StackOverflow를 통해 얻은 지식... https://stackoverflow.com/questions/72081872/runtimeerror-output-with-shape-1-doesnt-match-the-broadcast-shape-10/
+    - Mandias 의 말에 따르면 F.linear() 에 들어가 있는 Parameters 중에 self.W (이.하. w) 의 크기가 [1, 10] 으로 되어 있기 때문에 Input 1을 넣어 Output 10을 요구하는 것이라고 한다. 
+    Mandias는 이를 해결하기 위해서 self.W.squeeze를 말했다만, 이는 나의 코드에서도 동일한 오류가 발생한다. 분명 모든 사이즈와 차원이 1차원이라면... 오류가 날 이유가 없다...
 
 May. 1. 2022 (B. InSung)
 - Sunday and May is start!
